--- a/css/styles.css
+++ b/css/styles.css
@@ -5492,9 +5492,7 @@ textarea.form-control-lg {
 }
 
 .modal-body {
-  position: relative;
-  flex: 1 1 auto;
-  padding: var(--bs-modal-padding);
+  display: none;
 }
 
 .modal-footer {
@@ -5504,12 +5502,36 @@ textarea.form-control-lg {
   border-top: var(--bs-modal-footer-border-width) solid var(--bs-modal-footer-border-color);
   border-bottom-right-radius: var(--bs-modal-inner-border-radius);
   border-bottom-left-radius: var(--bs-modal-inner-border-radius);
-  width: 30%;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
+
 .modal-footer > * {
   margin: calc(var(--bs-modal-footer-gap) * 0.5);
+}
+
+@media (min-width: 992px) {
+  .modal-body {
+    display: flex;
+    position: relative;
+    flex: 1 1 auto;
+    padding: var(--bs-modal-padding);
+  }
+
+  .modal-footer {
+    flex-shrink: 0;
+    padding: calc(var(--bs-modal-padding) - var(--bs-modal-footer-gap) * 0.5);
+    background-color: var(--bs-modal-footer-bg);
+    border-top: var(--bs-modal-footer-border-width) solid var(--bs-modal-footer-border-color);
+    border-bottom-right-radius: var(--bs-modal-inner-border-radius);
+    border-bottom-left-radius: var(--bs-modal-inner-border-radius);
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+  }
 }
 
 .modal-button {
