Adjusted footer colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -4414,6 +4414,10 @@ textarea.form-control-lg {
   }
 }
 
+.card-text {
+  color: #8c6658;
+}
+
 .accordion {
   --bs-accordion-color: #212529;
   --bs-accordion-bg: #f2f2f2;
