--- a/css/styles.css
+++ b/css/styles.css
@@ -3854,7 +3854,7 @@ textarea.form-control-lg {
   padding-top: var(--bs-navbar-brand-padding-y);
   padding-bottom: var(--bs-navbar-brand-padding-y);
   margin-right: var(--bs-navbar-brand-margin-end);
-  font-size: var(--bs-navbar-brand-font-size);
+  font-size: 0.9rem;
   color: var(--bs-navbar-brand-color);
   text-decoration: none;
   white-space: nowrap;
@@ -3942,6 +3942,10 @@ textarea.form-control-lg {
 }
 
 @media (min-width: 576px) {
+  .navbar-brand {
+    font-size: 1.25rem;
+  }
+
   .navbar-expand-sm {
     flex-wrap: nowrap;
     justify-content: flex-start;
