--- a/css/styles.css
+++ b/css/styles.css
@@ -11183,7 +11183,7 @@ body {
 
 .masthead h1, .masthead .h1 {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
   background: linear-gradient(#f2f2f2, #1a1a1a00);
@@ -11311,8 +11311,14 @@ body {
 }
 
 .blog-title {
-  font-size: 4rem !important;
+  font-size: 2.3rem !important;
   line-height: 4rem !important;
+}
+
+@media (min-width: 768px) {
+  .blog-title {
+    font-size: 4rem !important;
+  }
 }
 
 .blog-sub {
