--- a/css/styles.css
+++ b/css/styles.css
@@ -3274,23 +3274,6 @@ textarea.form-control-lg {
   position: relative;
 }
 
-.dropdown-toggle {
-  white-space: nowrap;
-}
-.dropdown-toggle::after {
-  display: inline-block;
-  margin-left: 0.255em;
-  vertical-align: 0.255em;
-  content: "";
-  border-top: 0.3em solid;
-  border-right: 0.3em solid transparent;
-  border-bottom: 0;
-  border-left: 0.3em solid transparent;
-}
-.dropdown-toggle:empty::after {
-  margin-left: 0;
-}
-
 .dropdown-menu {
   --bs-dropdown-zindex: 1000;
   --bs-dropdown-min-width: 10rem;
@@ -3318,9 +3301,11 @@ textarea.form-control-lg {
   --bs-dropdown-header-color: #6c757d;
   --bs-dropdown-header-padding-x: 1rem;
   --bs-dropdown-header-padding-y: 0.5rem;
+  margin-left: -15% !important;
   position: absolute;
   z-index: var(--bs-dropdown-zindex);
   display: none;
+  width: 50%;
   min-width: var(--bs-dropdown-min-width);
   padding: var(--bs-dropdown-padding-y) var(--bs-dropdown-padding-x);
   margin: 0;
@@ -3846,7 +3831,7 @@ textarea.form-control-lg {
   padding-top: var(--bs-navbar-brand-padding-y);
   padding-bottom: var(--bs-navbar-brand-padding-y);
   margin-right: var(--bs-navbar-brand-margin-end);
-  font-size: 0.9rem;
+  font-size: 1.25rem;
   color: var(--bs-navbar-brand-color);
   text-decoration: none;
   white-space: nowrap;
@@ -3933,7 +3918,24 @@ textarea.form-control-lg {
   overflow-y: auto;
 }
 
+.desktop-menu {
+  display: none;
+}
+
+.mobile-menu {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media (min-width: 576px) {
+  .mobile-menu {
+    display: none;
+  }
+
+  .desktop-menu {
+    display: block;
+  }
+
   .navbar-brand {
     font-size: 1.25rem;
   }
