mobile navigation implemented

--- a/css/styles.css
+++ b/css/styles.css
@@ -3516,6 +3516,7 @@ textarea.form-control-lg {
   white-space: nowrap;
   background-color: transparent;
   border: 0;
+  font-size: 1.25rem;
 }
 .dropdown-item:hover, .dropdown-item:focus {
   color: var(--bs-dropdown-link-hover-color);
